# django-bikram-sambat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ne.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
django_bikram/: __init__.py  calendar_data.py  convert.py  date.py  formatting.py  sources.py
django_bikram/django/: admin.py  fields.py
django_bikram_sambat/: __init__.py  apps.py  calendar_data.py  convert.py  date.py  exceptions.py  fiscal.py  formatting.py  predict.py  sources.py
django_bikram_sambat/django/: __init__.py  admin.py  drf.py  fields.py  forms.py  lookups.py
django_bikram_sambat/static/django_bikram_sambat/: bs-datepicker.css  bs-datepicker.js
docs/: auditing.md  migrating.md  quickstart.md  quickstart.ne.md
packaging/: README.md
packaging/django-bikram-shim/: README.md  pyproject.toml
packaging/django-bikram-shim/django_bikram/: __init__.py
tests/: __init__.py  models.py  settings.py  test_admin.py  test_calendar_data.py  test_convert.py  test_date.py  test_django_fields.py  test_django_forms.py  test_drf.py  test_fiscal.py  test_formatting.py  test_lookups.py  test_picker.py  test_predict.py  test_sources.py
